# dioxus-swdir-tree

./: .gitignore  CHANGELOG.md  Cargo.toml  NOTICE  README.md  ROADMAP.md
.github/: SECURITY.md
crates/dioxus-swdir-tree/: Cargo.toml  README.md
crates/dioxus-swdir-tree-core/: Cargo.toml  README.md
crates/dioxus-swdir-tree-core/src/: cache.rs  config.rs  drag.rs  entry.rs  error.rs  event.rs  executor.rs  icon.rs  item_event.rs  item_tree.rs  keyboard.rs  lib.rs  node.rs  scan.rs  search.rs  selection.rs  tests.rs  tree.rs
crates/dioxus-swdir-tree-core/src/item_tree/: drag.rs  node.rs  search.rs  transitions.rs
crates/dioxus-swdir-tree-core/src/item_tree/drag/: tests.rs
crates/dioxus-swdir-tree-core/src/tree/: transitions.rs
crates/dioxus-swdir-tree-core/tests/: display_filters.rs  drag_drop.rs  executor.rs  icon_theme.rs  item_tree.rs  item_tree_drag_drop.rs  keyboard.rs  lazy_loading.rs  prefetch.rs  search.rs  selection_multi.rs  selection_single.rs
crates/dioxus-swdir-tree-core/tests/common/: mod.rs
crates/dioxus-swdir-tree/src/: driver.rs  event.rs  item_row.rs  item_view.rs  lib.rs  row.rs  style.rs  view.rs
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  concepts.md  driving-the-tree.md  filters-and-cache.md  getting-started.md  introduction.md  release-policy.md  testing.md
examples/explorer/: Cargo.toml
examples/explorer/src/: main.rs
rfcs/: README.md
rfcs/done/: 001-project-architecture.md  002-core-state-machine.md  003-display-filters.md  004-selection-model.md  005-async-scanning.md  006-dioxus-view-component.md  007-keyboard-navigation.md  008-drag-and-drop.md  009-prefetch.md  010-incremental-search.md  011-icon-themes.md  012-generic-item-tree.md  013-item-tree-drag-and-drop.md
rfcs/proposed/: 004-selection-model.md  005-async-scanning.md  006-dioxus-view-component.md  007-keyboard-navigation.md  008-drag-and-drop.md  009-prefetch.md  010-incremental-search.md  011-icon-themes.md
