[package]
name = "dioxus-swdir-tree-core"
description = "Framework-free directory-tree state machine powering dioxus-swdir-tree: lazy loading, display filters, and a generation-tagged async scan protocol over swdir."
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
swdir = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true

[features]
icons = []
