[package]
name = "dioxus-swdir-tree"
description = "Directory-tree explorer widget for Dioxus: lazy loading, display filters, selection, keyboard navigation, drag & drop."
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["default-style"]
# Bundle a small baseline stylesheet (dx-swdir-* class names).
# Disable to take full control of theming.
default-style = []

[dependencies]
dioxus-swdir-tree-core = { workspace = true }
dioxus = { version = "0.7", default-features = false, features = ["minimal"] }
futures-util = "0.3"

[lints]
workspace = true
